hide scrollbar from item-view, fix naming issue for Products.css

--- a/frontend/src/styles/ProductView.css
+++ b/frontend/src/styles/ProductView.css
@@ -1,23 +1,26 @@
 .product-view-container {
-    position: relative;
-    max-height: 74vh;
-    max-width: 97vh;
-    overflow: scroll;
-    height: 100%;
-    width: 100%;
-    margin-top: 13%;
-    margin-left: 8%;
-    margin-right: 8%;
+  position: relative;
+  max-height: 74vh;
+  max-width: 97vh;
+  overflow: scroll;
+  height: 100%;
+  width: 100%;
+  margin-top: 13%;
+  margin-left: 8%;
+  margin-right: 8%;
 
-    display: flex;
-    flex-direction: row;
-    
+  display: flex;
+  flex-direction: row;
 }
 
-.product-details-div{
-    position: relative;
+.product-details-div {
+  position: relative;
 }
 .product-view-image {
-    height: 400px;
-    width: 300px;
+  height: 400px;
+  width: 300px;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
